--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,14 @@
-t = true
+# top-most EditorConfig file
+root = true
+
+# Unix-style newlines with a newline ending every file
+[*]
+end_of_line = lf
+insert_final_newline = true
+
+[**.py]
+indent_style = space
+indent_size = 2
 
 [**.js]
 indent_style = space
@@ -9,6 +19,10 @@ indent_style = space
 indent_size = 2
 
 [**.html]
-;vim:max_char=78:brace_style=expand
+indent_style = space
+indent_size = 2
+brace_style = expand
+
+[{.travis.yml}]
 indent_style = space
 indent_size = 2
