--- a/.lint/.jshintrc
+++ b/.lint/.jshintrc
@@ -41,18 +41,19 @@
     "undef"         : true,     // Require all non-global variables be declared before they are used.
     "strict"        : false,     // Require `use strict` pragma in every file.
     "trailing"      : true,     // Prohibit trailing whitespaces.
-    
+    "unused"        : true,     // Prohibit unused variables
+
     // == Relaxing Options ================================================
     //
     // These options allow you to suppress certain types of warnings. Use
     // them only if you are absolutely positive that you know what you are
     // doing.
-    
+
     "asi"           : false,    // Tolerate Automatic Semicolon Insertion (no semicolons).
     "boss"          : false,    // Tolerate assignments inside if, for & while. Usually conditions & loops are for comparison, not assignments.
     "debug"         : false,    // Allow debugger statements e.g. browser breakpoints.
     "eqnull"        : false,    // Tolerate use of `== null`.
-    "es5"           : false,    // Allow EcmaScript 5 syntax.
+    "es5"           : true,    // Allow EcmaScript 5 syntax.
     "esnext"        : false,    // Allow ES.next specific features such as `const` and `let`.
     "evil"          : false,    // Tolerate use of `eval`.
     "expr"          : false,    // Tolerate `ExpressionStatement` as Programs.
@@ -73,35 +74,36 @@
     "sub"           : false,    // Tolerate all forms of subscript notation besides dot notation e.g. `dict['key']` instead of `dict.key`.
     "supernew"      : false,    // Tolerate `new function () { ... };` and `new Object;`.
     "validthis"     : false,    // Tolerate strict violations when the code is running in strict mode and you use this in a non-constructor function.
-    
+
     // == Environments ====================================================
     //
     // These options pre-define global variables that are exposed by
     // popular JavaScript libraries and runtime environments—such as
     // browser or node.js.
-    
+
     "browser"       : true,     // Standard browser globals e.g. `window`, `document`.
     "couch"         : false,    // Enable globals exposed by CouchDB.
     "devel"         : false,    // Allow development statements e.g. `console.log();`.
     "dojo"          : false,    // Enable globals exposed by Dojo Toolkit.
-    "jquery"        : false,    // Enable globals exposed by jQuery JavaScript library.
+    "jquery"        : true,    // Enable globals exposed by jQuery JavaScript library.
     "mootools"      : false,    // Enable globals exposed by MooTools JavaScript framework.
     "node"          : true,    // Enable globals available when code is running inside of the NodeJS runtime environment.
     "nonstandard"   : false,    // Define non-standard but widely adopted globals such as escape and unescape.
     "prototypejs"   : false,    // Enable globals exposed by Prototype JavaScript framework.
     "rhino"         : false,    // Enable globals available when your code is running inside of the Rhino runtime environment.
+    "worker"        : true,    // Web Workers
     "wsh"           : false,    // Enable globals available when your code is running as a script for the Windows Script Host.
-    
+
     // == JSLint Legacy ===================================================
     //
     // These options are legacy from JSLint. Aside from bug fixes they will
     // not be improved in any way and might be removed at any point.
-    
+
     "nomen"         : false,    // Prohibit use of initial or trailing underbars in names.
-    "onevar"        : true,    // Allow only one `var` statement per function.
+    "onevar"        : false,    // Allow only one `var` statement per function.
     "passfail"      : false,    // Stop on first error.
     "white"         : false,    // Check against strict whitespace and indentation rules.
-    
+
     // == Undocumented Options ============================================
     //
     // While I've found these options in [example1][2] and [example2][3]
