add simple push to gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,17 @@
 [user]
-    name = Johann
-    email = git@johann-hofmann.com
+  name = Johann
+  email = git@johann-hofmann.com
+
 [core]
-    editor = vim
+  editor = vim
 
 [color]
-    diff = auto
-    status = auto
-    branch = auto
-    interactive = auto
-    ui = true
-    pager = true
+  diff = auto
+  status = auto
+  branch = auto
+  interactive = auto
+  ui = true
+  pager = true
+
+[push]
+  default = simple
