--- a/.gitconfig
+++ b/.gitconfig
@@ -16,7 +16,7 @@
 
 [push]
   default = simple
-[url "git@github.com:"]
-  insteadOf = https://github.com/
+;[url "git@github.com:"]
+  ;insteadOf = https://github.com/
 [commit]
 	gpgsign = false
