--- a/.sshrc
+++ b/.sshrc
@@ -1,4 +1,3 @@
 export VIMINIT="let \$MYVIMRC='$SSHHOME/.sshrc.d/.vimrc' | source \$MYVIMRC"
-export ZDOTDIR=$SSHHOME/.sshrc.d
-exec zsh
 
+exec fish
